# ea-lidar-download

./: README.md  ea-dl.py  pyproject.toml
aws/: README.md  bootstrap.sh  ec2-download.py
scripts/: code-check.sh
