[project]
name = "ea-lidar-download"
version = "0.1.0"
description = "Download LIDAR tiles from Environment Agency API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=0.14.0",
    "httpx>=0.27.0",
    "shapely>=2.0.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["E501"]
extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]